--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,45 @@
-div {
-    color: blue;
+* {
+    margin: 0;
+    padding: 0;
+}
+
+#display, #grid div {
+    font-family: 'Courier New', Courier, monospace;
+    font-size: large;
+}
+
+#grid {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: repeat(3, 1fr);
+    width: 500px;
+    height: 500px;
+}
+
+#grid div {
+    border: 1px solid black;
+}
+
+.row1 {
+    grid-row: 1 / 2;
+}
+
+.row2 {
+    grid-row: 2 / 3;
+}
+
+.row3 {
+    grid-row: 3 / 4;
+}
+
+.column1 {
+    grid-column: 1 / 2;
+}
+
+.column2 {
+    grid-column: 2 / 3;
+}
+
+.column3 {
+    grid-column: 3 / 4;
 }
